# tp2-iia

./: README.md  pyproject.toml
docs/: report.typ
src/: alias.py  main.py  map.py  util.py
